# vina-gpu-dockerized

./: CMakeLists.txt  Dockerfile  Makefile  README.md  setup_gpu.sh
OpenCL/inc/: commonMacros.h  wrapcl.h
OpenCL/src/: wrapcl.cpp
OpenCL/src/kernels/: kernel2.cl  quasi_newton.cpp
input_file_example/: 2bm2_config.txt
lib/: monte_carlo.cpp  monte_carlo.h  parse_pdbqt.cpp
main/: main.cpp
